[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-google-genai>=4.2.4",
    "wikipedia>=1.4.0",
]
